# AncudTest

./: .gitignore  CMakeLists.txt  FileGenerator.cpp  ParallelSort.cpp  README.md  SortCheck.cpp
libs/: CMakeLists.txt  Parsing.cpp  Parsing.hpp
src/: CMakeLists.txt  FileGenerator.cpp  ParallelSort.cpp  SortCheck.cpp
tests/: CMakeLists.txt
